# knapsack

./: .gitignore  Dockerfile  README.md  connectors.toml  demo.py  docker-compose.yml  knapsack.toml  pyproject.toml
knapsack/: __init__.py  cli.py  knap_document.py  knapsack.py
knapsack/base/: cache.py  config.py  configs.py  embedder.py  error.py  llm_generator.py  logger.py  util.py
knapsack/connectors/: arxiv.py  base_connector.py  base_date_range_connector.py  bioarxiv.py  git.py  pubmed.py
knapsack/memory/: embed.py  qdrant.py
knapsack/util/: sql_parser.py  upsert_stats.py
